content is done

--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
       <a  href="#COTme"class="mr-5 hover:text-gray-900">Contact me</a>
       <!-- <a class="mr-5 hover:text-gray-900">Fourth Link</a> -->
     </nav>
-    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Button
-      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </button>
   </div>
 </header>
-<hr style="color:black">
+<hr style="height:2px;border-width:0;color:pink;background-color:pink">
     </div>
     <div class="div" id="HOME1">
         <section class="text-gray-700 body-font">
@@ -49,25 +44,26 @@
                       </svg>
                     </div>
                     <div class="flex flex-col items-center text-center justify-center">
-                      <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Phoebe Caulfield</h2>
+                      <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Denny madhav</h2>
                       <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4"></div>
-                      <p class="text-base text-gray-600">Raclette knausgaard hella meggs normcore williamsburg enamel pin sartorial venmo tbh hot chicken gentrify portland.</p>
+                      <p class="text-base text-gray-600">undergraduate<br> BCA <br>LPU<br><br><button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Resume
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                          <path d="M5 12h14M12 5l7 7-7 7"></path>
+                        </svg>
+                      </button></p>
                     </div>
                   </div>
                   <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
-                    <p class="leading-relaxed text-lg mb-4">Meggings portland fingerstache lyft, post-ironic fixie man bun banh mi umami everyday carry hexagon locavore direct trade art party. Locavore small batch listicle gastropub farm-to-table lumbersexual salvia messenger bag. Coloring book flannel truffaut craft beer drinking vinegar sartorial, disrupt fashion axe normcore meh butcher. Portland 90's scenester vexillologist forage post-ironic asymmetrical, chartreuse disrupt butcher paleo intelligentsia pabst before they sold out four loko. 3 wolf moon brooklyn.</p>
-                    <a class="text-indigo-500 inline-flex items-center">Learn More
-                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                        <path d="M5 12h14M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
+                    <p class="leading-relaxed text-lg mb-4">  i'm denny madhav,i'am currently pursuing BCA degree even tho in 12th i had biology as core subject my FATHER still supported me to get into
+                      IT sector, i choose this field because i  have  previous knowledge on coding and passion for application  development, so i have completed                     some online courses  which are JAVA, PYTHON,HTML and CSS. now i'm part of a project which will be finalised by next week apart from 
+                   coding i have hobbies on photography and video editing which made me to start my own youtube channel. right know i'm infront of you with a                       great knowledge on HTML,CSS which can fullfill your requirments and bring up some experience to my skills.</p>
                   </div>
                 </div>
               </div>
             </div>
           </section>
     </div>
-    <hr style="color:black">
+    <hr style="height:2px;border-width:0;color:pink;background-color:pink">
     <div class="hompg" id="ABTme">
         <section class="text-gray-700 body-font">
             <div class="container px-5 py-24 mx-auto flex flex-wrap">
@@ -82,13 +78,8 @@
                     </svg>
                   </div>
                   <div class="flex-grow">
-                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Shooting Stars</h2>
-                    <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-                    <a class="mt-3 text-pink-500 inline-flex items-center">Learn More
-                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                        <path d="M5 12h14M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
+                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Education</h2>
+                    <p class="leading-relaxed text-base">BCA(2019-2021)  LOVELY PROFFESIONAL UNIVERSITY,Punjab <br> PCB(2017-2019) DELHI PUBLIC SCHOOL,Vijayawada <br>10th(2016-2017) J.SIKILE SCHOOL,Narsapur </p>
                   </div>
                 </div>
                 <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -100,13 +91,9 @@
                     </svg>
                   </div>
                   <div class="flex-grow">
-                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">The Catalyzer</h2>
-                    <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-                    <a class="mt-3 text-pink-500 inline-flex items-center">Learn More
-                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                        <path d="M5 12h14M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
+                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Programming languages known</h2>
+                    <p class="leading-relaxed text-base"> HTML <br> CSS <br>  JAVASCRIPT <br> MYSQL <br> PYTHON</p>
+                    
                   </div>
                 </div>
                 <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -117,20 +104,15 @@
                     </svg>
                   </div>
                   <div class="flex-grow">
-                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Neptune</h2>
-                    <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-                    <a class="mt-3 text-pink-500 inline-flex items-center">Learn More
-                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                        <path d="M5 12h14M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
+                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">PROJECTS</h2>
+                    <p class="leading-relaxed text-base">PUBG airDrop loot location probability -- PYTHON,MATPLOTLIB</p>
                   </div>
                 </div>
               </div>
             </div>
           </section>
     </div>
-    <hr style="color:black">
+    <hr style="height:2px;border-width:0;color:pink;background-color:pink">
     <div class="div" id="COTme">
         <footer class="text-gray-500 bg-gray-900 body-font">
             <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
@@ -150,7 +132,7 @@
                   </svg>
                 </a> -->
                 
-                 <a class="ml-3 text-gray-600">
+                 <a class="ml-3 text-gray-600" href="https://twitter.com/DennyDe20476716">
                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                     <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
                   </svg>
