--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </style>
          <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">  
 </head>
-<body>
+<body style="background-image: linear-gradient(to bottom right, rgba(255,0,0,0), rgb(183, 110, 121)">
+  
     <div class="home" id="hompg">
         <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -16,7 +17,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
       </svg>
-      <span class="ml-3 text-xl">PORTFOLIO</span>
+      <span class="ml-3 text-xl">PORTFOLIO</span> 
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
       <a href="#HOME1" class="mr-5 hover:text-gray-900">HOME</a>
