--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
                     </div>
                   </div>
                   <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
-                    <p class="leading-relaxed text-lg mb-4">  i'm denny madhav,i'am currently pursuing BCA degree even tho in 12th i had biology as core subject my FATHER still supported me to get into
-                      IT sector, i choose this field because i  have  previous knowledge on coding and passion for application  development, so i have completed                     some online courses  which are JAVA, PYTHON,HTML and CSS. now i'm part of a project which will be finalised by next week apart from 
-                   coding i have hobbies on photography and video editing which made me to start my own youtube channel. right know i'm infront of you with a                       great knowledge on HTML,CSS which can fullfill your requirments and bring up some experience to my skills.</p>
+                    <p class="leading-relaxed text-lg mb-4">A tech-junkie pursuing bachelor's in Computer Applications at Lovely Professional University. The current objective is to gain technical experience in web development, IoT, and machine learning. Have coordinated several events on the campus. In my free time, I edit videos for my youtube channel.</p>
                   </div>
                 </div>
               </div>
