--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
         <section class="text-gray-700 body-font">
             <div class="container px-5 py-24 mx-auto flex flex-col">
               <div class="lg:w-4/6 mx-auto">
-                <div class="rounded-lg h-64 overflow-hidden">
-                  <img alt="content" class="object-cover object-center h-full w-full" src="https://source.unsplash.com/1200x500/?natural,artwork">
-                </div>
                 <div class="flex flex-col sm:flex-row mt-10">
                   <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
                     <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
@@ -51,11 +48,35 @@
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
                           <path d="M5 12h14M12 5l7 7-7 7"></path>
                         </svg>
-                      </button></p>
+                      </button>
+                      <hr>
+                      <hr>
+                      <hr>
+                      <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"><a href="https://www.youtube.com/channel/UCu1qanRrdPEm5dO0cIdb01Q">YouTube Channel </a>
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                          <path d="M5 12h14M12 5l7 7-7 7"></path>
+                        </svg>
+                      </button>
+                      <hr>
+                      <hr>
+                      <hr>
+                      <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"><a href="https://gameoftaste.com/">FOOD BLOG </a>
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                          <path d="M5 12h14M12 5l7 7-7 7"></path>
+                        </svg>
+                      </button>
+                    </p>
                     </div>
                   </div>
                   <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
                     <p class="leading-relaxed text-lg mb-4">A tech-junkie pursuing bachelor's in Computer Applications at Lovely Professional University. The current objective is to gain technical experience in web development, IoT, and machine learning. Have coordinated several events on the campus. In my free time, I edit videos for my youtube channel.</p>
+                    <p style="font-weight: bold;color:grey;">Programming languages known</p>
+                    
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">HTML</button>
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">CSS</button>
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">C</button>
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">MSQL</button>
+                    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">C++</button>
                   </div>
                 </div>
               </div>
@@ -90,7 +111,7 @@
                     </svg>
                   </div>
                   <div class="flex-grow">
-                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Programming languages known</h2>
+                    <h2 class="text-gray-900 text-lg title-font font-medium mb-3">new category give custom name"--"</h2>
                     <p class="leading-relaxed text-base"> HTML <br> CSS <br>  JAVASCRIPT <br> MYSQL <br> PYTHON</p>
                     
                   </div>
