--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="flex flex-col items-center text-center justify-center">
                       <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Denny madhav</h2>
                       <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4"></div>
-                      <p class="text-base text-gray-600">undergraduate<br> BCA <br>LPU<br><br><button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Resume
+                      <p class="text-base text-gray-600">Undergraduate<br> BCA <br>LPU<br><br><button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Resume
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
                           <path d="M5 12h14M12 5l7 7-7 7"></path>
                         </svg>
